# TheSmallestHardTrees

./: Cargo.toml  README.md
scripts/: slurm_taurus_polymorphism.sh  slurm_taurus_polymorphism_array.sh  slurm_taurus_polymorphism_merge.sh  slurm_taurus_srun.sh
src/tripolys/: lib.rs
src/tripolys/algebra/: homomorphism.rs  identities.rs  iteralgebra.rs  mod.rs  polymorphism.rs  term.rs  test.rs  utils.rs
src/tripolys/csp/: domain.rs  mod.rs  problem.rs  solve.rs  state_vec.rs
src/tripolys/graph/: adjlist.rs  adjmap.rs  adjmatrix.rs  classes.rs  edgelist.rs  formats.rs  generators.rs  mod.rs  traits.rs  utils.rs
src/tripolys/solve/: domain.rs  mod.rs  problem.rs  solver.rs
src/tripolys/tree/: generate.rs  mod.rs  node.rs  tree.rs
