[package]
name = "tripolys"
version = "1.0.0"
authors = ["Michael Wernthaler <michael.wernthaler@posteo.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "4", features = ["cargo"] }
colored = "2.0.0"
csv = "1.1.6"
indexmap = "1.9.2"
itertools = "0.14.0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive", "rc"]}

[lib]
name = "tripolys"
path = "src/tripolys/lib.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[[bin]]
name = "polymorphism"
path = "src/bin/polymorphism.rs"

[profile.release]
debug = true

[features]
trace = []
